tests/baselines/reference/declFileExportAssignmentImportInternalModule(strict=true).errors.txt
declFileExportAssignmentImportInternalModule.ts(4,14): error TS7006: Parameter 'res' implicitly has an 'any' type.
declFileExportAssignmentImportInternalModule.ts(4,19): error TS7006: Parameter 'req' implicitly has an 'any' type.
declFileExportAssignmentImportInternalModule.ts(4,24): error TS7006: Parameter 'next' implicitly has an 'any' type.


==== declFileExportAssignmentImportInternalModule.ts (3 errors) ====
    module m3 {
        export module m2 {
            export interface connectModule {
                (res, req, next): void;
                 ~~~
!!! error TS7006: Parameter 'res' implicitly has an 'any' type.
                      ~~~
!!! error TS7006: Parameter 'req' implicitly has an 'any' type.
                           ~~~~
!!! error TS7006: Parameter 'next' implicitly has an 'any' type.
            }
            export interface connectExport {
                use: (mod: connectModule) => connectExport;
                listen: (port: number) => void;
            }
    
        }
    
        export var server: {
            (): m2.connectExport;
            test1: m2.connectModule;
            test2(): m2.connectModule;
        };
    }
    
    import m = m3
    export = m;